<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DBSAndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Textview1">Email</string>
    <string name="title_activity_menudbs">Menudbs</string>
    <string name="Terror"></string>
    <string name="tPass">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="nama_lengkap">Name</string>
    <string name="tnohp">Handphone</string>
    <string name="tpass">Password</string>
    <string name="trepass">Re-Password</string>
    <string name="temail">E-mail</string>
    <string name="breg">Register</string>
    <string name="bbatal">Cancel</string>
    <string name="tnopol">No Polisi</string>
    <string name="tstnk">No STNK</string>
    <string name="tbpkb">No BPKB</string>
    <string name="Tthnpmbt">Tahun Pembuatan</string>
    <string name="bsel">Seller</string>
    <string name="Tlogout">Logout</string>

</resources>