<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/latar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tnama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/Textview1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/tPass" />

    <EditText
        android:id="@+id/edpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/blogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edpass"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />
    
    <Button
        android:id="@+id/bregis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blogin"
        android:layout_centerHorizontal="true"
        android:text="@string/breg" />

    <TextView
        android:id="@+id/texterror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tnama"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="22dp"
        android:text="@string/Terror" />

</RelativeLayout>