<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/latar_pro"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menudbs" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp"
        android:text="@string/tnopol" />

    <EditText
        android:id="@+id/ednopol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/tnopol"
        android:inputType="none" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edstnk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/tstnk"
        android:inputType="none" />

    <EditText
        android:id="@+id/edbpkb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10" android:inputType="none"
        android:hint="@string/tbpkb"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/edstnk"
        android:text="@string/tbpkb" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ednopol"
        android:layout_below="@+id/ednopol"
        android:text="@string/tstnk" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edstnk"
        android:layout_below="@+id/edbpkb"
        android:text="@string/Tthnpmbt" />

    <EditText
        android:id="@+id/edthnpmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:hint="@string/Tthnpmbt"
        android:inputType="none|number" />

    <Button
        android:id="@+id/bsel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edthnpmb"
        android:layout_alignRight="@+id/edthnpmb"
        android:layout_below="@+id/edthnpmb"
        android:layout_marginTop="14dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tlogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/edbpkb"
        android:text="@string/Tlogout"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>